--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+server.port=2020
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
