--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
