--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.show-sql=true
-server.port=2020
+server.address=localhost
+server.servlet.context-path=/post
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLdDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+# Use H2 DB uri and driver
+# http://localhost:1010/post/h2-console
+spring.datasource.url=jdbc:h2:mem:postdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
